GetReviewsFromPackage & docs
