# docs/swagger.json
@@ -266,6 +266,50 @@
                 }
             }
         },
+        "/package/reviews/{packageID}": {
+            "get": {
+                "description": "Get a reviews from certain package in database",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "review"
+                ],
+                "summary": "Get a reviews by packageID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Review ID",
+                        "name": "packageID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.Review"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "missing or invalid package ID",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/packages/create": {
             "post": {
                 "description": "Create a new package with the given name, description, price, and organizer ID",
@@ -373,7 +417,7 @@
                     "500": {
                         "description": "internal server error",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     }
                 }
@@ -407,25 +451,25 @@
                     "201": {
                         "description": "Review from user %d successfully created",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     },
                     "400": {
                         "description": "invalid payload",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     },
                     "422": {
                         "description": "review from same user: %s already exists",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "internal server error",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     }
                 }
@@ -451,19 +495,19 @@
                     "200": {
                         "description": "Review with ID %d successfully deleted",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     },
                     "400": {
                         "description": "missing or invalid review ID",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "internal server error",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     }
                 }
@@ -510,13 +554,13 @@
                     "400": {
                         "description": "missing or invalid review ID",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "internal server error",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     }
                 }
@@ -551,13 +595,13 @@
                     "400": {
                         "description": "missing or invalid review ID",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "internal server error",
                         "schema": {
-                            "$ref": "#/definitions/types.UserResponse"
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     }
                 }
